rust/macros/tests/invalid/target/debug/deps/no_comma-2140ec1d77fbd370.d
/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/no_comma-2140ec1d77fbd370.d: no_comma.rs Cargo.toml

/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/libno_comma-2140ec1d77fbd370.rmeta: no_comma.rs Cargo.toml

no_comma.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
